fixing right-side white space on mobile

--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@
     font: inherit;
     font-size: 1.125rem;
     padding-top: 1rem ;
-    width: 20rem;
+    width: 18rem;
     color: #000;
     &:focus, &:valid {
       outline: 0;
